tests/snapshots/fixtures__fixture@deployment__quoted_deployment_group_ok.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (container identifier:
                (identifier) name:
                (string))))
          (deployment_environment name:
            (string) body:
            (deployment_environment_block
              (deployment_node name:
                (string) attribute:
                (string) attribute:
                (string) attribute:
                (string) body:
                (deployment_node_block
                  (container_instance
                    (container_instance_grouped identifier:
                      (identifier) target:
                      (identifier) deployment_group:
                      (string))))))))))))
